Modulo_4_Kubernates/24_sesion/clases-seguridad/pod-criminal.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-criminal
  namespace: secureapp
spec:
  containers:
  - name: criminal
    image: alpine:3.20
    command: ["sleep", "1h"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      runAsNonRoot: true
      runAsUser: 1001
      seccompProfile:
        type: RuntimeDefault
